syntax = "proto3";

package secret.intertx.v1beta1;


import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

option go_package = "github.com/scrtlabs/SecretNetwork/x/mauth/types";
option (gogoproto.goproto_getters_all)  = false;
option (gogoproto.equal_all)            = true;

// Query defines the gRPC querier service.
service Query {
  // QueryInterchainAccountFromAddress returns the interchain account for given owner address on a given connection pair
  rpc InterchainAccountFromAddress(QueryInterchainAccountFromAddressRequest) returns (QueryInterchainAccountFromAddressResponse) {
    option (google.api.http).get = "/mauth/v1beta1/address-to-ica";
  };
}

// QueryInterchainAccountFromAddressRequest is the request type for the Query/InterchainAccountAddress RPC
message QueryInterchainAccountFromAddressRequest {
  string owner                      = 1;
  string connection_id              = 2 [(gogoproto.moretags) = "yaml:\"connection_id\""];
}

// QueryInterchainAccountFromAddressResponse the response type for the Query/InterchainAccountAddress RPC
message QueryInterchainAccountFromAddressResponse {
  string interchain_account_address = 1 [(gogoproto.moretags) = "yaml:\"interchain_account_address\""];
}